# 3D-CAD-OpenGL-QT

./: .gitignore  CMakeLists.txt
cad-opengl/: CMakeLists.txt  cad-opengl.cpp
